Fix overflow on list

--- a/app/assets/sass/core/_filter-layout.scss
+++ b/app/assets/sass/core/_filter-layout.scss
@@ -36,6 +36,5 @@
 
 .app-filter-layout__content {
   overflow: hidden;
-  overflow-x: auto;
+  // overflow-x: auto;
 }
-
